--- a/gmall-common-util/pom.xml
+++ b/gmall-common-util/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.gitee.reger</groupId>
+            <artifactId>spring-boot-starter-dubbo</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
