--- a/gmall-order-web/src/main/resources/application.properties
+++ b/gmall-order-web/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8082
+
+spring.dubbo.application.name=order-web
+spring.dubbo.registry.protocol=zookeeper
+spring.dubbo.registry.address=192.168.209.129:2181
+spring.dubbo.base-package=com.ywy.gmall
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.consumer.timeout=10000
+spring.dubbo.consumer.check=false
