--- a/gmall-usermanage/src/main/resources/application.properties
+++ b/gmall-usermanage/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/gmall?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.dubbo.application.name=usermanage
+spring.dubbo.registry.protocol=zookeeper
+spring.dubbo.registry.address=192.168.209.129:2181
+spring.dubbo.base-package=com.ywy.gmall
+spring.dubbo.protocol.name=dubbo
+
